fix(demo): fix gaps between tags

--- a/theme/default/src/demos.less
+++ b/theme/default/src/demos.less
@@ -128,11 +128,11 @@
     display: none;
   }
   .tag {
-    margin-right: 18px;
+    margin-right: 44px;
     cursor: pointer;
   }
   .tag span{
-    margin-left: 8px;
+    margin-left: 6px;
     display: none;
   }
   .tag.selected {
